--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
 notifications:
   hipchat:
     rooms:
-      secure: WfUu7pViMsCPwe/eGKViF0y37PnqiyLWzxr+OAn4GHWmSKpbdBtzBy/QbPVuxzERMjAQFljt+U7f9Ix8PjQHN3tuDJuLxVhv+8yYiQf1yvFbSuMV9Sk/hJdSUu6itW6tb5sm75fHxe//UuJT03qS0N1vRXbZwPu6hrt6UOsmie4=
+      secure: JNZbQsamtdY3i/NO1DUi/+QRNrx5r2AR65fclQK6u+04Inol8PiCtEyl5hXdiuNAc+EStm8tpGTElDUDeDpop+1B9k74m0h48NYXIz88fybgA1Cr4dF5aslmhQhOh/AI2txTeuFpaOhH6KrTx4h4/S0nmfylrVHS64BOZy5UfDc=
     template:
-      - '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}'
+    - ! '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}'
+
