--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: ruby
+install: "bin/wad"
+script: "bundle exec rake spec"
 rvm:
 - 1.9.3
 - 2.0.0
@@ -8,4 +10,8 @@ notifications:
       secure: JNZbQsamtdY3i/NO1DUi/+QRNrx5r2AR65fclQK6u+04Inol8PiCtEyl5hXdiuNAc+EStm8tpGTElDUDeDpop+1B9k74m0h48NYXIz88fybgA1Cr4dF5aslmhQhOh/AI2txTeuFpaOhH6KrTx4h4/S0nmfylrVHS64BOZy5UfDc=
     template:
     - ! '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}'
-
+env:
+  global:
+  - S3_BUCKET_NAME=abs-travis-wad
+  - S3_REGION=us-east-1
+  - secure: "aXXgdoLPsCgUweQVp0xmCLpJ4iWCxDtmpuxOUbTp7JJruJKUgPshDFyZz16RrjbtiSLH4qBYmHs0O8qqU8KQEQS3FifuDEbB3SuqDhnTkcdmYYXTTND3qGcU8P5czI6d4OW50SL/ejN/E2O7STtalc7vVFJPrPUkl9ZlAvdVheU="
