--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ pickle-email-*.html
 # Ignore application configuration
 config/*application.yml
 .elasticbeanstalk/
+
+# WAD travic-ci acceleration artifacts
+script/tmp
