--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-install: "script/wad"
+#install: "script/wad"
 script: "bundle exec rake spec"
 rvm:
 - 1.9.3
@@ -14,3 +14,4 @@ env:
   global:
   - S3_BUCKET_NAME=abs-travis-wad
   - secure: "aXXgdoLPsCgUweQVp0xmCLpJ4iWCxDtmpuxOUbTp7JJruJKUgPshDFyZz16RrjbtiSLH4qBYmHs0O8qqU8KQEQS3FifuDEbB3SuqDhnTkcdmYYXTTND3qGcU8P5czI6d4OW50SL/ejN/E2O7STtalc7vVFJPrPUkl9ZlAvdVheU="
+
